# NCWM

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/: frame.h  logger.h  ncwm_manager.h  ncwm_types.h
modules/core/src/: frame.cpp  ncwm_manager.cpp
resources/: README.md
samples/basic/input/: CMakeLists.txt
samples/basic/input/src/: main.cpp
samples/basic/multiwindow/: CMakeLists.txt
samples/basic/multiwindow/src/: main.cpp
samples/basic/template/: CMakeLists.txt
samples/basic/template/src/: main.cpp
samples/basic/window/: CMakeLists.txt
samples/basic/window/src/: main.cpp
samples/ncurses_examples/1_hello_world/: CMakeLists.txt
samples/ncurses_examples/2_input/: CMakeLists.txt
samples/ncurses_examples/3_box/: CMakeLists.txt
samples/ncurses_examples/template/: CMakeLists.txt
